--- a/index.html
+++ b/index.html
@@ -454,13 +454,13 @@
             <div class="container">
                 <div class="banner-container">
                     <h2 class="banner-title" data-aos="fade-down" data-aos-duration="3000">
-                        <p>Save The Date</p>
+                        <p >Save The Date</p>
                     </h2>
                     <p class="banner-slogan script-font" data-aos="fade-up" data-aos-duration="3000"></p>
                     <div class="banner-name">
-                        Minh Ngọc<br>
+                        Hồng Luyên<br>
                         <span>&</span><br>
-                        Hồng Luyên
+                        Minh Ngọc
                     </div>
                     <div class="banner-date">
                         <span class="day_name" data-aos="fade-right" data-aos-duration="3000">Tháng
